[gd_scene load_steps=8 format=3 uid="uid://cfqrjal7jn48p"]

[ext_resource type="Theme" uid="uid://ti5t14mpo4hx" path="res://assets/other_menu_theme.tres" id="1_5f0y7"]
[ext_resource type="Script" path="res://scripts/options_menu.gd" id="2_0j5ti"]
[ext_resource type="Texture2D" uid="uid://b0lgp2tfhmg47" path="res://assets/title_screen.png" id="3_3r6eg"]
[ext_resource type="Texture2D" uid="uid://cqmv84agfojlt" path="res://assets/settings_screen.png" id="4_wxjlk"]

[sub_resource type="LabelSettings" id="LabelSettings_niw8j"]
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_huyrb"]
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_8l7w4"]
font_size = 20

[node name="OptionsMenu" type="Control"]
process_mode = 3
z_index = 1000
z_as_relative = false
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_5f0y7")
script = ExtResource("2_0j5ti")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("3_3r6eg")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.133333, 0.168627, 0.403922)

[node name="MenuRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("4_wxjlk")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 575
theme_override_constants/margin_right = 600

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="BoxContainer" type="BoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="OptionsLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"
label_settings = SubResource("LabelSettings_niw8j")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BoxContainer2" type="BoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="FullscreenContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BoxContainer" type="BoxContainer" parent="MarginContainer/VBoxContainer/FullscreenContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FullscreenLabel" type="Label" parent="MarginContainer/VBoxContainer/FullscreenContainer"]
layout_mode = 2
text = "Fullscreen"
label_settings = SubResource("LabelSettings_huyrb")
horizontal_alignment = 2

[node name="BoxContainer2" type="BoxContainer" parent="MarginContainer/VBoxContainer/FullscreenContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="FullscreenCheckButton" type="CheckButton" parent="MarginContainer/VBoxContainer/FullscreenContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2

[node name="BoxContainer3" type="BoxContainer" parent="MarginContainer/VBoxContainer/FullscreenContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BoxContainer6" type="BoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="MasterVolumeContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MasterVolumeLabel" type="Label" parent="MarginContainer/VBoxContainer/MasterVolumeContainer"]
layout_mode = 2
text = "Master Volume"
label_settings = SubResource("LabelSettings_8l7w4")
horizontal_alignment = 1

[node name="MasterVolumeSlider" type="HSlider" parent="MarginContainer/VBoxContainer/MasterVolumeContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
max_value = 1.0
step = 0.001

[node name="BoxContainer3" type="BoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="MusicVolumeContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MusicVolumeLabel" type="Label" parent="MarginContainer/VBoxContainer/MusicVolumeContainer"]
layout_mode = 2
text = "Music Volume"
label_settings = SubResource("LabelSettings_8l7w4")
horizontal_alignment = 1

[node name="MusicVolumeSlider" type="HSlider" parent="MarginContainer/VBoxContainer/MusicVolumeContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
max_value = 1.0
step = 0.001

[node name="BoxContainer4" type="BoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="SfxVolumeContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SfxVolumeLabel" type="Label" parent="MarginContainer/VBoxContainer/SfxVolumeContainer"]
layout_mode = 2
text = "SFX Volume"
label_settings = SubResource("LabelSettings_8l7w4")
horizontal_alignment = 1

[node name="SfxVolumeSlider" type="HSlider" parent="MarginContainer/VBoxContainer/SfxVolumeContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
max_value = 1.0
step = 0.001

[node name="BoxContainer5" type="BoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="ReturnToTitleButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 20
text = "Return to Title"

[connection signal="toggled" from="MarginContainer/VBoxContainer/FullscreenContainer/FullscreenCheckButton" to="." method="_on_fullscreen_toggled"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/MasterVolumeContainer/MasterVolumeSlider" to="." method="_on_master_volume_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/MusicVolumeContainer/MusicVolumeSlider" to="." method="_on_music_volume_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/SfxVolumeContainer/SfxVolumeSlider" to="." method="_on_sfx_volume_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ReturnToTitleButton" to="." method="on_return_to_title_pressed"]
